# advent-of-code-2022

./: .gitignore
cpp/day_one/: CMakeLists.txt
cpp/day_one/src/: calories_counter.cpp  calories_counter.hpp  main.cpp
cpp/day_one/tests/: test.cpp
cpp/day_three/: CMakeLists.txt
cpp/day_three/src/: main.cpp
cpp/day_three/src/app/: parser.hpp  rucksack_parser.cpp  rucksack_parser.hpp
cpp/day_three/src/domain/: engine.cpp  engine.hpp  rucksack.cpp  rucksack.hpp
cpp/day_three/tests/: parser_test.cpp  test.cpp
cpp/day_two/: CMakeLists.txt
cpp/day_two/src/: engine.cpp  engine.hpp  main.cpp
cpp/day_two/tests/: test.cpp
cpp/day_two_part_two/: CMakeLists.txt
cpp/day_two_part_two/src/: engine.cpp  engine.hpp  main.cpp  parser.hpp  tuple_parser.hpp
cpp/day_two_part_two/tests/: test.cpp
golang/day_one/: day_one  go.mod  main.go
golang/day_one/src/optimization/: optimization.go  optimization_test.go
haskell/day-one/: CHANGELOG.md  LICENSE  day-one.cabal  package.yaml
haskell/day-one/app/: Main.hs
haskell/day-one/src/: Lib.hs
